--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 advent_of_code-*.tar
 
+# Ignore inputs
+*_p1.txt
+*_p2.txt
+
